--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -472,7 +472,7 @@ body {
     display: none; } }
 
 .container-head {
-  display: grid;
+  display: grid !important;
   grid-template-columns: repeat(2, 1fr);
   content: "";
   display: table;
@@ -501,14 +501,25 @@ body {
   .container-head h3 {
     margin: 1rem 0 0;
     padding: 0;
-    float: left;
-    clear: both;
     font-size: 1.5rem; }
+
+.container-head .heading {
+  grid-column: 1;
+  grid-row: 1; }
+
+.container-head .btn {
+  grid-column: 2;
+  grid-row: 1;
+  align-self: flex-start;
+  justify-self: flex-end; }
 
 .container-head .btn:hover {
   cursor: pointer;
   color: white;
   background: #502b70; }
+
+.tips-container .tips-list li {
+  margin: 10px 0; }
 
 .container-body img {
   width: 100%;
